@@ -5565,6 +5565,9 @@
                             <para>Fixed problem when creating ~/dir</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed crash when creating dir with absolute path on SMB share</para>
+                        </listitem>
+                        <listitem>
                             <para>Build fixes</para>
                         </listitem>
                     </itemizedlist>
