@@ -113,7 +113,7 @@ gchar       *gnome_cmd_dir_get_uri_str (GnomeCmdDir *dir);
 GnomeVFSURI *gnome_cmd_dir_get_child_uri (GnomeCmdDir *dir, const gchar *filename);
 gchar       *gnome_cmd_dir_get_child_uri_str (GnomeCmdDir *dir, const gchar *filename);
 
-GnomeVFSURI *gnome_cmd_dir_get_absolute_path_uri (GnomeCmdDir *dir, std::string &filename);
+GnomeVFSURI *gnome_cmd_dir_get_absolute_path_uri (GnomeCmdDir *dir, std::string filename);
 
 void gnome_cmd_dir_file_created (GnomeCmdDir *dir, const gchar *filename);
 void gnome_cmd_dir_file_deleted (GnomeCmdDir *dir, const gchar *filename);
