@@ -6,6 +6,7 @@ Bug fixes:
  * Fixed problem #446361 (build issues on Solaris)
  * Fixed problem #447415 (inability to launch executables)
  * Fixed problem when creating ~/dir
+ * Fixed crash when creating dir with absolute path on SMB share
  * Build fixes
 
 New features:
